--- a/client/package.json
+++ b/client/package.json
@@ -7,6 +7,7 @@
         "build": "webpack --mode production"
     },
     "dependencies": {
+        "axios": "^1.7.7",
         "react": "^17.0.2",
         "react-dom": "^17.0.2",
         "react-force-graph": "^1.44.6"
