--- a/client/package.json
+++ b/client/package.json
@@ -8,6 +8,7 @@
     },
     "dependencies": {
         "axios": "^1.7.7",
+        "lvc-hack-baal-client": "file:",
         "react": "^17.0.2",
         "react-dom": "^17.0.2",
         "react-force-graph": "^1.44.6"
